# KMeans

./: .gitignore  CMakeLists.txt  benchmark.cpp  kmeans.hpp  main.cpp  palette.hpp  readme.md  smallTest.cpp
lib/: kmeans.hpp  palette.hpp
